--- a/3framework-overview.tex
+++ b/3framework-overview.tex
@@ -40,9 +40,9 @@ However, the exact implementation of LSH was not done in this work. Instead, ins
 \end{enumerate}
 
 
-\subsection{Phase 2: Chamfer Distance-Inspired Semantic Extraction and Retrieval Technique}
+\subsection{Phase 2: CD-Inspired Semantic Extraction and Retrieval Technique}
 The second technique suggested in this work is the \textit{Chamfer Distance-Inspired Semantic Extraction and Retrieval Technique}.
-Chamfer distance is one of the many distance measure (see Section \ref{section:distancemeasures}) introduced by mathematicians and researchers. Chamfer Distance, as introduced by \cite{barrow1977parametric}, was originally designed to match images by comparing the shapes of two collections of shape fragments.
+Chamfer Distance (CD) is one of the many distance measure (see Section \ref{section:distancemeasures}) introduced by mathematicians and researchers. Chamfer Distance, as introduced by \cite{barrow1977parametric}, was originally designed to match images by comparing the shapes of two collections of shape fragments.
 However, in this work, the use of chamfer distance was modified to suit the research problem of comparing vehicle trajectories' shapes. While the implementation of chamfer distance measure in this framework has its advantages, it also comes with some drawbacks. The considerations taken when designing this technique is as such:
 
 \begin{enumerate}
