slight update chapt 3 and 4

--- a/3framework-overview.tex
+++ b/3framework-overview.tex
@@ -28,6 +28,7 @@ The formulation of idea, steps and process involved in each phase is described i
 As a whole, the end-to-end framework can be visualised using Figure \ref{fig:framework} where the main contribution of this work is highlighted in yellow border.
 
 \subsection{Phase 1: LSH-Inspired Semantic Extraction and Retrieval Technique}
+\label{subsec:lsh-intro}
 The first of the two techniques suggested in this work is the \textit{LSH-Inspired Semantic Extraction and Retrieval Technique}. Locality-Sensitive Hashing (LSH) is a technique used for dimensionality reduction.
 Unlike conventional hashing techniques that aims to avoid hash collision, LSH tries to maximize hash collisions.
 When performed on a set of documents, documents with similar properties are mapped and clustered to similar locality or neighbourhood. This technique excels especially when working with high dimensional data such as video data.
