edited mainly chapt 4, some changes in 5 and main thesis tex file

--- a/thesis.tex
+++ b/thesis.tex
@@ -55,11 +55,11 @@ breaklines=true,breakatwhitespace=true}
 
 
 \newcommand*\mean[1]{\bar{#1}}
-\newcommand{\versionOneExt}{LSH-Inspired Semantic Extraction }
-\newcommand{\versionTwoExt}{Chamfer Distance-Inspired Semantic Extraction }
+\newcommand{\versionOneExt}{Phase 1: LSH-Inspired Semantic Extraction }
+\newcommand{\versionTwoExt}{Phase 2: Chamfer Distance-Inspired Semantic Extraction }
 
-\newcommand{\versionOneRet}{LSH-Inspired Retrieval Technique }
-\newcommand{\versionTwoRet}{Chamfer Distance based Retrieval Technique  }
+\newcommand{\versionOneRet}{Phase 1: LSH-Inspired Retrieval Technique }
+\newcommand{\versionTwoRet}{Phase 2: Chamfer Distance based Retrieval Technique  }
 
 
 
@@ -119,12 +119,12 @@ breaklines=true,breakatwhitespace=true}
 \declarationpage
 
 \acknowledgements{
-Firstly, I would like to thank my wife, Jocelyn for encouraging me to take on this seemingly "less travelled road". Her unceasing support and understanding throughout this journey is precious and much appreciated. 
+Firstly, I would like to thank my wife, Jocelyn for encouraging me to take on this seemingly "less travelled road". Her unceasing support and understanding throughout this journey is precious and much appreciated.
 
 Undeniably, this journey would not be possible without the advises, ideas and guidance provided by my supervisors, Dr. John See as well as Dr. Wong Lai Kuan. Their input certainly has sparked ideas which has been materialised in this work. Thanks you, I owe you many.
 
-Not forgetting my family and friends who supported me on this journey. My fellow church members who were encouraging me throughout my masters. Thanks a lot! 
-Last and not least, I would like to applaud myself and give myself some credit for putting myself out there, not being afraid to chase after goals and take on challenges that I would have never thought of. 
+Not forgetting my family and friends who supported me on this journey. My fellow church members who were encouraging me throughout my masters. Thanks a lot!
+Last and not least, I would like to applaud myself and give myself some credit for putting myself out there, not being afraid to chase after goals and take on challenges that I would have never thought of.
 }
 \dedication{To my parents, my wife, and my family.}
 
@@ -138,9 +138,6 @@ Last and not least, I would like to applaud myself and give myself some credit f
 \prefacefromfile{preface}
 
 \mainmatter
-
-
-
 
 
 \include{1introduction}
